--- a/phpBB3 Social Media Buttons/styles/all/template/event/overall_header_head_append.html
+++ b/phpBB3 Social Media Buttons/styles/all/template/event/overall_header_head_append.html
@@ -1,1 +1,4 @@
 <!-- INCLUDECSS @tas2580_socialbuttons/style.css -->
+<script>
+function open_socialmedia(url){window.open(url,'','width=500, height=600');return false;}
+</script>
