Added OG Meta tags

--- a/styles/all/template/event/overall_header_head_append.html
+++ b/styles/all/template/event/overall_header_head_append.html
@@ -2,3 +2,10 @@
 <script>
 function open_socialmedia(url){window.open(url,'','width=500, height=600');return false;}
 </script>
+<!-- IF ENABLE_OG -->
+<!-- IF OG_IMAGE --><meta property="og:image" content="{OG_IMAGE}" /><!-- ENDIF -->
+<!-- IF ENABLE_OG_TITLE --><meta property="og:title" content="{OG_TITLE}" /><!-- ENDIF -->
+<!-- IF ENABLE_OG_DESC --><meta property="og:description" content="{OG_DESCRIPTION}" /><!-- ENDIF -->
+
+
+<!-- ENDIF -->
