Update for phpBB 3.1.4

--- a/styles/all/template/style.css
+++ b/styles/all/template/style.css
@@ -1,3 +1,5 @@
+/* Style Sheet for Social Media Buttons
+---------------------------------------- */
 .socialmediabuttons1
 {
 	background: url('sprite1.png') no-repeat;
