[FIX] BAd place for CSS/IMG

--- a/styles/prosilver/template/event/overall_header_head_append.html
+++ b/styles/prosilver/template/event/overall_header_head_append.html
@@ -1,5 +1,5 @@
 <!-- IF S_ENABLE_BUTTONS -->
-<!-- INCLUDECSS @tas2580_socialbuttons/style.css -->
+<!-- INCLUDECSS ../theme/style.css -->
 <script>
 function open_socialmedia(url){window.open(url,'','width=500, height=600');return false;}
 </script>
