--- a/styles/prosilver/theme/style.css
+++ b/styles/prosilver/theme/style.css
@@ -2,7 +2,7 @@
 ---------------------------------------- */
 .socialmediabuttons1
 {
-	background: url('sprite1.png') no-repeat;
+	background: url('images/sprite1.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
@@ -12,7 +12,7 @@
 }
 .socialmediabuttons2
 {
-	background: url('sprite2.png') no-repeat;
+	background: url('images/sprite2.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
@@ -22,7 +22,7 @@
 }
 .socialmediabuttons3
 {
-	background: url('sprite3.png') no-repeat;
+	background: url('images/sprite3.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
@@ -32,7 +32,7 @@
 }
 .socialmediabuttons4
 {
-	background: url('sprite4.png') no-repeat;
+	background: url('images/sprite4.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
@@ -42,7 +42,7 @@
 }
 .socialmediabuttons5
 {
-	background: url('sprite5.png') no-repeat;
+	background: url('images/sprite5.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
@@ -52,7 +52,7 @@
 }
 .socialmediabuttons6
 {
-	background: url('sprite6.png') no-repeat;
+	background: url('images/sprite6.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
@@ -62,7 +62,7 @@
 }
 .socialmediabuttons7
 {
-	background: url('sprite7.png') no-repeat;
+	background: url('images/sprite7.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
@@ -72,7 +72,7 @@
 }
 .socialmediabuttons8
 {
-	background: url('sprite8.png') no-repeat;
+	background: url('images/sprite8.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
@@ -82,7 +82,7 @@
 }
 .socialmediabuttons9
 {
-	background: url('sprite9.png') no-repeat;
+	background: url('images/sprite9.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
@@ -92,7 +92,7 @@
 }
 .socialmediabuttons10
 {
-	background: url('sprite10.png') no-repeat;
+	background: url('images/sprite10.png') no-repeat;
 	display:inline-block;
 	width:28px;
 	height:28px;
