--- a/styles/prosilver/template/event/viewtopic_body_pagination_top_after.html
+++ b/styles/prosilver/template/event/viewtopic_body_pagination_top_after.html
@@ -1,16 +1,16 @@
 <!-- IF S_ENABLE_BUTTONS and S_SHOW_AT_TOP -->
 <div style="position:absolute; margin-left:380px;">
 	<!-- IF S_FACEBOOK -->
-	<a href="#" onclick="return open_socialmedia('https://www.facebook.com/sharer/sharer.php?u={U_TOPICLINK}');" title="{L_SHARE_FACEBOOK}" class="socialmedia1 {SOCIAL_MEDIA_CLASS}">&nbsp;</a><!-- IF S_SHOWSHARES --><span class="social_count">{SHARES_FACEBOOK}</span><!-- ENDIF -->
+	<a href="https://www.facebook.com/sharer/sharer.php?u={U_TOPICLINK}" onclick="return open_socialmedia('https://www.facebook.com/sharer/sharer.php?u={U_TOPICLINK}');" title="{L_SHARE_FACEBOOK}" class="socialmedia1 {SOCIAL_MEDIA_CLASS}">&nbsp;</a><!-- IF S_SHOWSHARES --><span class="social_count">{SHARES_FACEBOOK}</span><!-- ENDIF -->
 	<!-- ENDIF -->
 	<!-- IF S_TWITTER -->
-	<a href="#" onclick="return open_socialmedia('https://twitter.com/intent/tweet?text={OG_TITLE}&amp;url={U_TOPICLINK}');" title="{L_SHARE_TWITTER}" class="socialmedia3 {SOCIAL_MEDIA_CLASS}">&nbsp;</a><!-- IF S_SHOWSHARES --><span class="social_count">{SHARES_TWITTER}</span><!-- ENDIF -->
+	<a href="https://twitter.com/intent/tweet?text={OG_TITLE}&amp;url={U_TOPICLINK}" onclick="return open_socialmedia('https://twitter.com/intent/tweet?text={OG_TITLE}&amp;url={U_TOPICLINK}');" title="{L_SHARE_TWITTER}" class="socialmedia3 {SOCIAL_MEDIA_CLASS}">&nbsp;</a><!-- IF S_SHOWSHARES --><span class="social_count">{SHARES_TWITTER}</span><!-- ENDIF -->
 	<!-- ENDIF -->
 	<!-- IF S_GOOGLE -->
-	<a href="#" onclick="return open_socialmedia('https://plus.google.com/share?url={U_TOPICLINK}&amp;title={OG_TITLE}');" title="{L_SHARE_GOOGLEPLUS}" class="socialmedia4 {SOCIAL_MEDIA_CLASS}">&nbsp;</a><!-- IF S_SHOWSHARES --><span class="social_count">{SHARES_GOOGLE}</span><!-- ENDIF -->
+	<a href="https://plus.google.com/share?url={U_TOPICLINK}&amp;title={OG_TITLE}" onclick="return open_socialmedia('https://plus.google.com/share?url={U_TOPICLINK}&amp;title={OG_TITLE}');" title="{L_SHARE_GOOGLEPLUS}" class="socialmedia4 {SOCIAL_MEDIA_CLASS}">&nbsp;</a><!-- IF S_SHOWSHARES --><span class="social_count">{SHARES_GOOGLE}</span><!-- ENDIF -->
 	<!-- ENDIF -->
 	<!-- IF S_LINKEDIN -->
-	<a href="#" onclick="return open_socialmedia('http://www.linkedin.com/shareArticle?mini=true&amp;url={U_TOPICLINK}&amp;title={OG_TITLE}');" title="{L_SHARE_LINKEDIN}" class="socialmedia2 {SOCIAL_MEDIA_CLASS}">&nbsp;</a><!-- IF S_SHOWSHARES --><span class="social_count">{SHARES_LINKEDIN}</span><!-- ENDIF -->
+	<a href="http://www.linkedin.com/shareArticle?mini=true&amp;url={U_SHARELINK}&amp;title={OG_TITLE}" onclick="return open_socialmedia('http://www.linkedin.com/shareArticle?mini=true&amp;url={U_TOPICLINK}&amp;title={OG_TITLE}');" title="{L_SHARE_LINKEDIN}" class="socialmedia2 {SOCIAL_MEDIA_CLASS}">&nbsp;</a><!-- IF S_SHOWSHARES --><span class="social_count">{SHARES_LINKEDIN}</span><!-- ENDIF -->
 	<!-- ENDIF -->
 </div>
 <!-- ENDIF -->
