added event tas2580_socialbuttons_after

--- a/styles/prosilver/template/event/viewtopic_body_footer_before.html
+++ b/styles/prosilver/template/event/viewtopic_body_footer_before.html
@@ -12,6 +12,7 @@
 	<!-- IF S_LINKEDIN -->
 	<a href="http://www.linkedin.com/shareArticle?mini=true&amp;url={U_TOPICLINK}&amp;title={OG_TITLE}" onclick="return open_socialmedia('http://www.linkedin.com/shareArticle?mini=true&amp;url={U_TOPICLINK}&amp;title={OG_TITLE}');" title="{L_SHARE_LINKEDIN}" class="socialmedia2 {SOCIAL_MEDIA_CLASS}">&nbsp;</a><!-- IF S_SHOWSHARES --><span class="social_count">{SHARES_LINKEDIN}</span><!-- ENDIF -->
 	<!-- ENDIF -->
-	<br />
+	<!-- EVENT tas2580_socialbuttons_after -->
+	<br>
 <!-- ENDIF -->
 
